--- a/app/styles/styles.qss
+++ b/app/styles/styles.qss
@@ -1,7 +1,6 @@
 QPushButton {
     background-color: #EAE7B1;
-    border: 1px solid #a4a27c;
-    border-radius: 5px;
+    border: 0px solid #a4a27c;
     color: #2f2e23;
     font-family: "Open Sans Medium";
     padding: 7%;
@@ -19,7 +18,7 @@ QPushButton:pressed {
 
 QPushButton:disabled {
     background-color: #a4a27c;
-    border: 1px solid #a4a27c;
+    border: 0px solid #a4a27c;
     color: #757459;
 }
 
@@ -30,7 +29,7 @@ QWidget#Pomodoro {
 QLabel#Timer {
     background-color: #61876E;
     border: 1px solid #a0b7a8;
-    border-radius: 5px;
+    border-radius: 1px;
     color: #dfe7e2;
     font-family: "Open Sans ExtraBold";
     font-size: 75px;
@@ -49,4 +48,23 @@ QMessageBox#StopDialog QLabel{
 QMessageBox#StopDialog QLabel{
     color: #dfe7e2;
     
+}
+
+QWidget#Titlebar QLabel{
+    background-color: #243b33;
+    border: 0 solid #243b33;
+    color: #dfe7e2;
+}
+
+QWidget#Titlebar QPushButton{
+    background-color: #243b33;
+    color: #dfe7e2;
+}
+
+QWidget#Titlebar QPushButton:hover{
+    background-color: #304e44;
+}
+
+QWidget#Titlebar QPushButton:pressed{
+    background-color: #36584d;
 }
